[metadata]
name = sampex
version = 0.1.2
description = 'Programs to load and plot the SAMPEX satellite data.'
long_description = file: README.md 
url=https://github.com/mshumko/sampex
author='M. Shumko'
author_email="M. Shumko" <msshumko@gmail.com>
long_description_content_type = text/markdown
keywords = data science, SAMPEX, satellite, HILT, PET, LICA
python_requires='>=3.0'
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
# The packages required for a general users. Here we don't want to pin down the exact
# version to avoid dependency hell.
install_requires = 
    matplotlib
    numpy
    pandas

[options.entry_points]
console_scripts =
    plot_sampex = sampex.plot_sampex:main